feat(photo-processing): implement location processing and geocoding system
Add comprehensive location processing pipeline including EXIF GPS extraction,
coordinate validation, and Nominatim reverse geocoding with caching support.
Enhance photo metadata with location data and improve ExifPanel display.
Add geocode cache file to .gitignore to exclude generated data from tracking.

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ builder.config.json
 apps/web/assets-git
 apps/web/public/thumbnails
 apps/web/src/data/photos-manifest.json
+apps/web/src/data/.geocode-cache.json
 .vercel
 photos
 */*/.next
