feat(config): add geocoding and UI configuration options
- Introduced geocoding settings in builder and site configurations, allowing for customizable language preferences.
- Updated ExifPanel to utilize site configuration for displaying detailed location based on user settings.
- Enhanced example configuration files to reflect new options for geocoding and UI display preferences.

--- a/builder.config.example.json
+++ b/builder.config.example.json
@@ -6,5 +6,8 @@
     "prefix": "photos/",
     "customDomain": "https://cdn.example.com",
     "endpoint": "https://s3.amazonaws.com"
+  },
+  "geocoding": {
+    "acceptLanguage": "en"
   }
 }
