--- a/config.example.json
+++ b/config.example.json
@@ -12,5 +12,8 @@
   "map": [
     "maplibre"
   ],
-  "mapStyle": "builtin"
+  "mapStyle": "builtin",
+  "ui": {
+    "showDetailedLocation": false
+  }
 }
